fixed misplaced fullscreen gradient. Added drop shadow for improved visibility on fullscreen.

--- a/www/templates/html/css/player.css
+++ b/www/templates/html/css/player.css
@@ -261,9 +261,15 @@ ul.mh-transcript li {
 
 .mh-caption-search.full-screen {
     width: 30%;
-    height: 603px;
+    min-width: 300px;
+    max-height: 603px;
     top: 4%;
     left: 2%;
+    box-shadow: 0px 2px 7px RGBA(0,0,0,0.4);
+}
+
+.mh-caption-search.full-screen div.mh-caption-container {
+    border: none;
 }
 
 .mh-paragraph-icons {
